--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+
     <application
         android:name=".EduLearnApp"
         android:allowBackup="true"
@@ -27,6 +31,7 @@
 
         <service
             android:name=".presentation.session.StudySessionTimerService"
+            android:foregroundServiceType="specialUse"
             android:exported="false" />
     </application>
 
